# ZDRay

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: continuous_integration.yml
src/: main.cpp
src/blockmapbuilder/: blockmapbuilder.cpp  blockmapbuilder.h
src/commandline/: main.cpp
src/framework/: binfile.cpp  binfile.h  bounds.cpp  file.cpp  file.h  filesystem.cpp  filesystem.h  matrix.h  tarray.h  templates.h  textureid.cpp  textureid.h  utf16.cpp  vectors.h  xs_Float.h  zdray.h  zipreader.cpp  zipreader.h  zstrformat.cpp  zstring.cpp  zstring.h
src/level/: doomdata.h  level.cpp  level.h  level_light.cpp  level_slopes.cpp  level_udmf.cpp  workdata.h
src/lightmap/: collision.cpp  collision.h  common.h  cpuraytracer.cpp  cpuraytracer.h  delauneytriangulator.cpp  delauneytriangulator.h  glsl_closesthit.h  glsl_frag.h  glsl_frag_resolve.h  glsl_miss.h  glsl_raygen.h  glsl_rchit_ambient.h  glsl_rchit_bounce.h  glsl_rchit_light.h  glsl_rchit_sun.h  glsl_rgen_ambient.h  glsl_rgen_bounce.h  glsl_rgen_light.h  glsl_rgen_sun.h  glsl_rmiss_ambient.h  glsl_rmiss_bounce.h  glsl_rmiss_light.h  glsl_rmiss_sun.h  glsl_vert.h  gpuraytracer.cpp  gpuraytracer.h  gpuraytracer2.cpp  gpuraytracer2.h  levelmesh.cpp  levelmesh.h  lightmap.cpp  lightmap.h  lightmaptexture.cpp  lightmaptexture.h  lightsurface.cpp  lightsurface.h  mapdata.cpp  mapdata.h  pngwriter.cpp  (+28 more)
src/lightmap/kexlib/: array.h  binfile.cpp  binfile.h  kstring.cpp  kstring.h  memheap.cpp  memheap.h  parser.cpp  parser.h
src/lightmap/kexlib/math/: angle.cpp  bounds.cpp  mathlib.cpp  mathlib.h  matrix.cpp  plane.cpp  pluecker.cpp  quaternion.cpp  random.cpp  vector.cpp
src/lightmapper/: doom_levelmesh.cpp  doom_levelmesh.h  doom_levelsubmesh.cpp  doom_levelsubmesh.h  gpuraytracer.cpp  gpuraytracer.h  hw_collision.cpp  hw_collision.h  hw_levelmesh.cpp  hw_levelmesh.h  hw_levelmeshlight.h  hw_levelmeshportal.h  hw_levelmeshsurface.h  hw_lightmaptile.h  hw_materialstate.h  hw_surfaceuniforms.h  levelmeshviewer.cpp  levelmeshviewer.h  textureid.h  vk_levelmesh.cpp  vk_levelmesh.h  vk_lightmap.cpp  vk_lightmap.h  vk_lightmapper.cpp  vk_lightmapper.h  vk_raytrace.cpp  vk_raytrace.h  vk_renderdevice.cpp  vk_renderdevice.h
src/lightmapper/glsl/: binding_lightmapper.glsl.h  binding_raytrace.glsl.h  binding_textures.glsl.h  binding_viewer.glsl.h  frag_blur.glsl.h  frag_copy.glsl.h  frag_raytrace.glsl.h  frag_resolve.glsl.h  frag_viewer.glsl.h  montecarlo.glsl.h  polyfill_rayquery.glsl.h  trace_ambient_occlusion.glsl.h  trace_bounce.glsl.h  trace_levelmesh.glsl.h  trace_light.glsl.h  trace_sunlight.glsl.h  vert_copy.glsl.h  vert_raytrace.glsl.h  vert_screenquad.glsl.h  vert_viewer.glsl.h
src/math/: angle.cpp  bounds.cpp  mat.cpp  mathlib.cpp  mathlib.h  matrix.cpp  plane.cpp  pluecker.cpp  quaternion.cpp  random.cpp  vec.h  vector.cpp
src/models/: model.cpp  model.h  model_md2.h  model_md3.h  model_obj.h  model_ue1.h  modelrenderer.h  models_md2.cpp  models_md3.cpp  models_obj.cpp  models_ue1.cpp
src/nodebuilder/: nodebuild.cpp  nodebuild.h  nodebuild_classify_nosse2.cpp  nodebuild_classify_sse1.cpp  nodebuild_classify_sse2.cpp  nodebuild_classify_sse2_vect.cpp  nodebuild_events.cpp  nodebuild_extract.cpp  nodebuild_gl.cpp  nodebuild_utility.cpp
src/parse/: sc_man.cpp  sc_man.h
src/platform/windows/: resource.rc
src/viewer/: view.cpp
src/wad/: wad.cpp  wad.h
zlib/: gzguts.h
